--- a/pruebaIOS/pruebaIOS/Base.lproj/Main.storyboard
+++ b/pruebaIOS/pruebaIOS/Base.lproj/Main.storyboard
@@ -186,8 +186,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Conócenos" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dc3-1N-JSg">
-                                <rect key="frame" x="71" y="65" width="191" height="43"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Conócenos" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dc3-1N-JSg">
+                                <rect key="frame" x="78" y="65" width="207" height="43"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="36"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -206,9 +206,9 @@
                             <constraint firstItem="dc3-1N-JSg" firstAttribute="top" secondItem="olr-kI-LAM" secondAttribute="top" constant="65" id="7Yb-nU-rdb"/>
                             <constraint firstItem="2h6-bp-SuP" firstAttribute="top" secondItem="dc3-1N-JSg" secondAttribute="bottom" constant="18.5" id="Dj7-BJ-ic3"/>
                             <constraint firstItem="2h6-bp-SuP" firstAttribute="leading" secondItem="olr-kI-LAM" secondAttribute="leading" constant="40" id="J0n-uq-ep2"/>
-                            <constraint firstItem="dc3-1N-JSg" firstAttribute="leading" secondItem="olr-kI-LAM" secondAttribute="leading" constant="71" id="VFH-1t-wbf"/>
+                            <constraint firstItem="dc3-1N-JSg" firstAttribute="leading" secondItem="olr-kI-LAM" secondAttribute="leading" constant="78" id="VFH-1t-wbf"/>
                             <constraint firstItem="olr-kI-LAM" firstAttribute="trailing" secondItem="2h6-bp-SuP" secondAttribute="trailing" constant="40" id="bHG-O5-oFf"/>
-                            <constraint firstItem="olr-kI-LAM" firstAttribute="trailing" secondItem="dc3-1N-JSg" secondAttribute="trailing" constant="113" id="bZA-5c-doK"/>
+                            <constraint firstItem="olr-kI-LAM" firstAttribute="trailing" secondItem="dc3-1N-JSg" secondAttribute="trailing" constant="90" id="bZA-5c-doK"/>
                             <constraint firstItem="olr-kI-LAM" firstAttribute="bottom" secondItem="2h6-bp-SuP" secondAttribute="bottom" constant="35" id="oWe-ds-td0"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="olr-kI-LAM"/>
